sfdx/force-app/main/default/objects/Opportunity/fields/TTS_Office__c.field-meta.xml
<CustomField>
    <fullName>TTS_Office__c</fullName>
    <inlineHelpText>Enter name of TTS office</inlineHelpText>
    <label>TTS Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18F</fullName>
            </value>
            <value>
                <fullName>Centers of Excellence</fullName>
            </value>
            <value>
                <fullName>Cloud.gov</fullName>
            </value>
            <value>
                <fullName>Login.gov</fullName>
            </value>
            <value>
                <fullName>Presidential Innovation Fellows</fullName>
            </value>
            <value>
                <fullName>USAgov</fullName>
            </value>
            <value>
                <fullName>U.S. Digital Corps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>10x</fullName>
            </value>
            <value>
                <fullName>api.data.gov</fullName>
            </value>
            <value>
                <fullName>Challenge.gov</fullName>
            </value>
            <value>
                <fullName>CitizenScience.gov</fullName>
            </value>
            <value>
                <fullName>Code.gov</fullName>
            </value>
            <value>
                <fullName>Contractor Performance Assessment Reporting System (CPARS)</fullName>
            </value>
            <value>
                <fullName>Data.gov</fullName>
            </value>
            <value>
                <fullName>Digital Analytics Program (DAP)</fullName>
            </value>
            <value>
                <fullName>Digital.gov</fullName>
            </value>
            <value>
                <fullName>eRulemaking Program (eR)</fullName>
            </value>
            <value>
                <fullName>Electronic Subcontracting Reporting System (eSRS)</fullName>
            </value>
            <value>
                <fullName>Federal Audit Clearinghouse (FAC)</fullName>
            </value>
            <value>
                <fullName>FedRAMP</fullName>
            </value>
            <value>
                <fullName>Federal Procurement Data System (FPDS)</fullName>
            </value>
            <value>
                <fullName>Federal Funding Accountability and Transparency Act Subaward Reporting System (FSRS)</fullName>
            </value>
            <value>
                <fullName>Interagency Collaboration</fullName>
            </value>
            <value>
                <fullName>Interagency Suspension and Debarment Committee (ISDC)</fullName>
            </value>
            <value>
                <fullName>Made in America (MiA)</fullName>
            </value>
            <value>
                <fullName>Office of Acquisition (OA)</fullName>
            </value>
            <value>
                <fullName>Open Gvt Secretariat</fullName>
            </value>
            <value>
                <fullName>Public Benefits Studio</fullName>
            </value>
            <value>
                <fullName>System for Award Management (SAM.gov)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>