sfdx/force-app/main/default/objects/Opportunity/fields/TTSOffering__c.field-meta.xml
<CustomField>
    <fullName>TTSOffering__c</fullName>
    <label>TTS Offering</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TTS_Office__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18F Path Analysis</fullName>
            </value>
            <value>
                <fullName>18F E&amp;I only</fullName>
            </value>
            <value>
                <fullName>18F PA+EI bundle</fullName>
            </value>
            <value>
                <fullName>18F Acq Consulting</fullName>
            </value>
            <value>
                <fullName>18F Assisted Acq</fullName>
            </value>
            <value>
                <fullName>COE</fullName>
            </value>
            <value>
                <fullName>PIF Fellow (1st-2nd year)</fullName>
            </value>
            <value>
                <fullName>PIF EIR (3-4th year)</fullName>
            </value>
            <value>
                <fullName>Cloud.gov</fullName>
            </value>
            <value>
                <fullName>Cloud.gov Pages</fullName>
            </value>
            <value>
                <fullName>Cloud.gov Max</fullName>
            </value>
            <value>
                <fullName>Login.gov Authentication</fullName>
            </value>
            <value>
                <fullName>Login.gov Authentication and Identity Verification</fullName>
            </value>
            <value>
                <fullName>U.S. Digital Corps Fellow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>