sfdx/force-app/main/default/objects/Opportunity/fields/Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contract__c</fullName>
    <inlineHelpText>Select type from list or choose other to enter in other type</inlineHelpText>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Firm Fixed Price (FFP)</fullName>
            </value>
            <value>
                <fullName>Time and Materials (T&amp;M)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>