sfdx/force-app/main/default/objects/Opportunity/recordTypes/Login_gov.recordType-meta.xml
<RecordType>
    <fullName>Login_gov</fullName>
    <active>true</active>
    <businessProcess>Login%2Egov</businessProcess>
    <description>Login.gov Opportunities</description>
    <label>Login.gov</label>
</RecordType>