sfdx/force-app/main/default/objects/Opportunity/recordTypes/TTS_OTCRM_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>TTS_OTCRM_Opportunity</fullName>
    <active>true</active>
    <businessProcess>TTS OTCRM</businessProcess>
    <description>Technology Transformation Services (TTS) Opportunity Tracker CRM (OTCRM)</description>
    <label>TTS OTCRM Opportunity</label>
</RecordType>