sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_End_Date_Cannot_Be_Before_Begin_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_End_Date_Cannot_Be_Before_Begin_Date</fullName>
    <active>true</active>
    <description>Requiring &quot;Period of Performance End&quot; date to be after &quot;Period of Performance Start&quot; date</description>
    <errorConditionFormula>AND (RecordType.Name =&apos;TTS OTCRM Opportunity&apos;, Period_of_Performance_Start__c  &gt;  Period_of_Performance_End__c)</errorConditionFormula>
    <errorMessage>Period Performance End Date cannot be before Period Performance Begin Date.</errorMessage>
</ValidationRule>