sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Other_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Other_Lead_Source</fullName>
    <active>true</active>
    <description>If the picklist value &quot;Other&quot; is selected for the field &quot;Lead Source&quot; on the TTS Opportunity page, the &quot;Other Lead Source&quot; field is required.</description>
    <errorConditionFormula>OR(
 AND(
   RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
   ISBLANK( Other_Lead_Source__c ),
   ISPICKVAL( LeadSource , &apos;Other&apos;)
 ),
 AND(
   RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
   NOT(ISBLANK( Other_Lead_Source__c )),
   NOT(ISPICKVAL( LeadSource , &apos;Other&apos;))
 )
)</errorConditionFormula>
    <errorDisplayField>Other_Lead_Source__c</errorDisplayField>
    <errorMessage>Fill out &quot;Other Lead Source&quot; only if &quot;Other&quot; was chosen as the  Lead Source field. If you did not choose &quot;Other&quot;, leave it blank</errorMessage>
</ValidationRule>