sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Other_TTS_Offering.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Other_TTS_Offering</fullName>
    <active>true</active>
    <description>If the picklist value &quot;Other&quot; is selected for the field &quot;TTS Offering&quot; on the TTS Opportunity page, the &quot;Other TTS Offering&quot; field is required.</description>
    <errorConditionFormula>OR(
 AND(
    RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
    ISBLANK(  Other_TTS_Offering__c ),
    ISPICKVAL(   TTSOffering__c , &apos;Other&apos;)
  ), 
AND(
   RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
   NOT(ISBLANK(  Other_TTS_Offering__c )),
   NOT(ISPICKVAL(   TTSOffering__c , &apos;Other&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Other_TTS_Offering__c</errorDisplayField>
    <errorMessage>Fill out &quot;Other TTS Offering&quot; only if &quot;Other&quot; was chosen as the TTS Offering field. If you did not choose &quot;Other&quot;, leave it blank.</errorMessage>
</ValidationRule>