sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Other_Type_of_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Other_Type_of_Contract</fullName>
    <active>true</active>
    <description>If the picklist value &quot;Other&quot; is selected for the field &quot;Type of Contract&quot; on the TTS Opportunity page, the &quot;Other Type of Contract&quot; field is required.</description>
    <errorConditionFormula>OR(
 AND(
RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
ISBLANK( Other_Type_of_Contract__c ),
ISPICKVAL( Type_of_Contract__c , &apos;Other&apos;) 
),
AND(
RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
NOT (ISBLANK( Other_Type_of_Contract__c )),
NOT (ISPICKVAL( Type_of_Contract__c , &apos;Other&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Other_Type_of_Contract__c</errorDisplayField>
    <errorMessage>Fill out &quot; Other Type of Contract&quot; only if &quot;Other&quot; was chosen as Type of Contract field. If you did not choose &quot;Other&quot;, leave it blank</errorMessage>
</ValidationRule>