sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Scoped_Amt_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Scoped_Amt_Must_Be_Greater_Than_Zero</fullName>
    <active>false</active>
    <description>To select &quot;Scoped&quot; stage, the opportunity amount cannot be blank and has to be greater than $0.</description>
    <errorConditionFormula>AND(
RecordType.Name =&apos;TTS OTCRM Opportunity&apos;,
ISPICKVAL(StageName, &apos;Scoped&apos;),
OR(ISBLANK(Amount) || Amount &lt;= 0)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>To select the &quot;Scoped&quot; stage, the opportunity amount cannot be blank and has to be greater than zero.</errorMessage>
</ValidationRule>