sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Agreements.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Agreements</fullName>
    <active>true</active>
    <description>Please enter the required fields for the Opportunity to enter Agreements</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot;&amp;&amp;
ISPICKVAL( StageName, &quot;Agreements&quot; )&amp;&amp;
ISBLANK(  Proposal__c  )</errorConditionFormula>
    <errorDisplayField>Proposal__c</errorDisplayField>
    <errorMessage>Please enter the Proposal for the Opportunity to enter Agreements</errorMessage>
</ValidationRule>