sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot;&amp;&amp;
ISPICKVAL( StageName, &quot;Closed Lost&quot; )&amp;&amp;
ISPICKVAL( Closed_Lost_reason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Closed_Lost_reason__c</errorDisplayField>
    <errorMessage>Please enter the Closed Lost reason for the Opportunity to enter Closed Lost</errorMessage>
</ValidationRule>