sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Closed_Won_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Closed_Won_Sequence</fullName>
    <active>true</active>
    <description>Opportunity cannot go to Closed Won  from Lead Generation or Lead Qualification or Opportunity Development or Negotiation</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot; &amp;&amp;
ISCHANGED(StageName) &amp;&amp;
ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp; 
(
ISPICKVAL(PRIORVALUE(StageName),&quot;Lead Generation&quot;) ||
ISPICKVAL(PRIORVALUE(StageName),&quot;Lead Qualification&quot;) ||
ISPICKVAL(PRIORVALUE(StageName),&quot;Opportunity Development&quot;) ||
ISPICKVAL(PRIORVALUE(StageName),&quot;Negotiation&quot;)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Opportunity cannot go to Closed Won  from Lead Generation or Lead Qualification or Opportunity Development or Negotiation</errorMessage>
</ValidationRule>