sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Disqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Disqualified</fullName>
    <active>true</active>
    <description>Please select the Disqualified Reason Opportunity to enter Disqualified</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot;&amp;&amp;
ISPICKVAL( StageName, &quot;Disqualified&quot; )&amp;&amp;
ISPICKVAL( Disqualified_reason__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Disqualified_reason__c</errorDisplayField>
    <errorMessage>Please select the Disqualified Reason Opportunity to enter Disqualified</errorMessage>
</ValidationRule>