sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Lead_Generation.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Lead_Generation</fullName>
    <active>true</active>
    <description>Please enter the required fields for the Opportunity to enter Lead Generation Stage</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot; &amp;&amp;
ISPICKVAL(StageName, &quot;Lead Generation&quot;)&amp;&amp;
(
ISBLANK(Name)||
ISPICKVAL(Source__c, &quot;&quot;)||
ISBLANK(Sourced_By__c)||
ISBLANK(AccountId)||
ISPICKVAL( Opportunity_Type__c , &quot;&quot;)||
ISPICKVAL(Status__c, &quot;&quot;) 
)</errorConditionFormula>
    <errorMessage>Please enter the required fields for the Opportunity to enter Lead Generation Stage.
Name,
Source,
Sourced By,
Account,
Opportunity Type,
Status</errorMessage>
</ValidationRule>