sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Lead_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Lead_Qualification</fullName>
    <active>true</active>
    <description>Please enter the required fields for the Opportunity to enter Lead Qualification Stage</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot;&amp;&amp;
ISPICKVAL( StageName, &quot;Lead Qualification&quot; )&amp;&amp;
(
ISBLANK( Name ) ||
ISPICKVAL( Source__c, &quot;&quot; )||
ISBLANK( Sourced_By__c )||
ISBLANK( AccountId )||
ISPICKVAL( Opportunity_Type__c , &quot;&quot;)||
ISBLANK( BD_Folder__c )
)</errorConditionFormula>
    <errorMessage>Please enter the required fields for the Opportunity to enter Lead Qualification Stage.
Name,
Source,
Sourced By,
Account,
Opportunity Type,
BD Folder</errorMessage>
</ValidationRule>