sfdx/force-app/main/default/objects/Opportunity/validationRules/TTS_Stage_Negotiation.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Stage_Negotiation</fullName>
    <active>true</active>
    <description>Amount must be greater than 0 and the Start Date cannot be blank for the Opportunity to enter Negotiation</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;TTS_OTCRM_Opportunity&quot;&amp;&amp;
ISPICKVAL( StageName, &quot;Negotiation&quot; )&amp;&amp;
(
Amount &lt;= 0 ||
ISBLANK ( Amount ) ||
ISBLANK( Start_Date__c )
)</errorConditionFormula>
    <errorMessage>Amount must be greater than 0 and the Start Date cannot be blank for the Opportunity to enter Negotiation</errorMessage>
</ValidationRule>