sfdx/force-app/main/default/objects/Opportunity/listViews/FY25_MD_P_Facilitated_Opportunities.listView-meta.xml
<ListView>
    <fullName>FY25_MD_P_Facilitated_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>TTS_Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mark_for_deletion__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Required_Information_Form__c</field>
        <operation>equals</operation>
        <value>MD&amp;P</value>
    </filters>
    <label>FY25 MD&amp;P Facilitated Opportunities</label>
</ListView>