sfdx/force-app/main/default/objects/Opportunity/listViews/LDGCRM_Top_Opportunities.listView-meta.xml
<ListView>
    <fullName>LDGCRM_Top_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>LDGCRM_Est_Annual_Revenue_fully_ramped__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>LDGCRM_Estimated_Go_Live_Date__c</columns>
    <columns>LDGCRM_Likely_Service_Level_Needed__c</columns>
    <columns>LDGCRM_Focus_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Login_gov</value>
    </filters>
    <filters>
        <field>LDGCRM_Est_Annual_Revenue_fully_ramped__c</field>
        <operation>greaterOrEqual</operation>
        <value>100000</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <label>Top Login.gov Opportunities</label>
    <sharedTo>
        <group>LDGCRM_Team_Members</group>
        <group>LDGCRM_Viewers</group>
    </sharedTo>
</ListView>