sfdx/force-app/main/default/objects/Opportunity/listViews/Opportunities_My_Attention_Needed.listView-meta.xml
<ListView>
    <fullName>Opportunities_My_Attention_Needed</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.EXP_AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_ACTIVITY</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LAST_ACTIVITY</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>TTS - My Opportunities(Attention Needed)</label>
    <sharedTo>
        <group>TTS_OTCRM_Users</group>
    </sharedTo>
</ListView>