sfdx/force-app/main/default/objects/Opportunity/listViews/TTS_My_Opportunities.listView-meta.xml
<ListView>
    <fullName>TTS_My_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.TTS_OTCRM_Opportunity</value>
    </filters>
    <label>TTS - My Opportunities</label>
    <sharedTo>
        <group>TTS_OTCRM_Users</group>
    </sharedTo>
</ListView>