sfdx/force-app/main/default/objects/Opportunity/listViews/TTS_My_Programs_Opportunities.listView-meta.xml
<ListView>
    <fullName>TTS_My_Programs_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MyProgram__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>TTS - My Programs Opportunities</label>
    <sharedTo>
        <group>TTS_OTCRM_Users</group>
    </sharedTo>
</ListView>