sfdx/force-app/main/default/objects/Opportunity/listViews/TTS_Opportunities.listView-meta.xml
<ListView>
    <fullName>TTS_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>TTS_Office__c</columns>
    <columns>Project_description__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.FISCAL_YEAR</columns>
    <filterScope>Everything</filterScope>
    <label>TTS - All Opportunities</label>
    <sharedTo>
        <group>TTS_OTCRM_Users</group>
    </sharedTo>
</ListView>